<resources>
    <string name="app_name">Tech-er</string>
    <string name="hello_world">Hello World</string>
    <string name="button">Button</string>
    <string name="java">Java</string>
    <string name="hardware">Hardware</string>
    <string name="personal_page">Personal Page</string>
    <string name="forum">Forum</string>
    <string name="techer">Tech-er</string>
    <string name="cred_ts">credıts</string>
    <string name="username">Username</string>
    <string name="statements">Statements</string>
    <string name="operations">Operations</string>
    <string name="loops">loops</string>
    <string name="arrays">arrays</string>
    <string name="var_ables">varıables</string>
    <string name="operat_ons">operatıons</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="learn">Learn</string>
    <string name="quiz">Quiz</string>
    <string name="try_yourself">Try Yourself</string>
    <string name="question">question</string>
    <string name="question_level">question Level</string>
    <string name="question_string">question string</string>
    <string name="choice1">choice1</string>
    <string name="what">WHAT</string>
    <string name="ach_evement_quest_on">achıevement questıon</string>
    <string name="variables">Variables</string>
    <string name="type_your_answer_here">Type your answer here</string>
    <string name="correct">correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="monitor">monıtor</string>
    <string name="Motherboard">Motherboard</string>
    <string name="CPU">CPU</string>
    <string name="RAM">RAM</string>
    <string name="Expansion_cards">Expansıon Cards</string>
    <string name="Power_supply_unit">Power Supply Unıt</string>
    <string name="Optical_disc_drive">Optıcal Dısc Drıve</string>
    <string name="Hard_disc_drive">Hard Dısc Drıve</string>
    <string name="Input_devices">Input Devıces</string>
    <string name="FiveQuestions">5 Questıons</string>
    <string name="TenQuestions">10 Questıons</string>
    <string name="FifteenQuestions">15 Questıons</string>
    <string name="Expansion_Cards">Expansion Cards</string>
    <string name="welcome_to_techer">Welcome to Techer</string>
    <string name="we_are_here_to_guide_you_on_your_first_steps">We are here to guide you on your first steps.</string>
    <string name="lets_begin">Lets Begin</string>

</resources>