<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:background="@drawable/background">


    <android.widget.Button
        android:id="@+id/javaButton"
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:background="@drawable/main_menu_button"
        android:textColor="#fff"
        android:layout_above="@id/hardwareButton"
        android:layout_centerHorizontal="true"
        android:text="@string/java"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/techerText" />

    <android.widget.Button
        android:id="@+id/personaPage"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#fff"
        android:background="@drawable/main_menu_button"
        android:text="@string/personal_page"
        android:layout_below="@id/forumPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hardwareButton" />

    <android.widget.Button
        android:id="@+id/hardwareButton"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:textColor="#fff"
        android:background="@drawable/main_menu_button"
        android:text="@string/hardware"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/javaButton" />

    <android.widget.Button
        android:id="@+id/forumPage"
        android:layout_width="236dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:textColor="#fff"
        android:background="@drawable/main_menu_button"
        android:text="@string/forum"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_below="@id/hardwareButton"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaPage" />

    <TextView
        android:id="@+id/techerText"
        android:layout_above="@+id/javaButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/techer"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="70sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:background="@drawable/biggestheader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/creditsButton"
        android:textColor="#fff"
        android:background="@drawable/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/personaPage"
        android:text="@string/cred_ts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forumPage"
        android:layout_marginStart="100dp" />


    <TextView
        android:id="@+id/usernameDisplay"
        android:layout_above="@id/javaButton"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/techerText"
        app:layout_constraintEnd_toEndOf="@+id/techerText"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/techerText"
        app:layout_constraintTop_toTopOf="@+id/techerText"
        app:layout_constraintVertical_bias="0.83" />

    <android.widget.Button
        android:id="@+id/logoutButton"
        android:textColor="#fff"
        android:background="@drawable/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft= "30dp"
        android:layout_below="@+id/personaPage"
        android:text= "Log Out"
        android:layout_toRightOf="@id/creditsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forumPage" />



</RelativeLayout>
